# flipt-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: integration.yml  lint.yml  publish.yml  release-please.yml  unit.yml
examples/: list_flags.rs
script/: local-integration.sh
src/: error.rs  lib.rs
src/api/: constraint.rs  distribution.rs  evaluate.rs  evaluation.rs  flag.rs  mod.rs  namespace.rs  rollout.rs  rule.rs  segment.rs  variant.rs
src/auth/: mod.rs  token.rs
src/evaluate/: mod.rs
src/evaluation/: mod.rs
src/meta/: info.rs  mod.rs
tests/: integration.rs
