[package]
name = "flipt"
description = "Flipt API client library."
repository = "https://github.com/brettbuddin/flipt-rust.git"
version = "0.1.0"
edition = "2021"
authors = ["Brett Buddin <brett@buddin.org>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["flipt"]

[features]
flipt_integration = []

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
chrono = { version = "0.4.23", default-features = false, features = ["serde", "clock"] }
httptest = "0.15.4"
reqwest = { version = "0.11.13", default-features = false, features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", default-features = false, features = [ "macros", "rt-multi-thread", "time" ] }
url = "2.3.1"
