[package]
name = "flipt"
description = "Official Rust SDK for Flipt"
repository = "https://github.com/flipt-io/flipt-rust.git"
version = "0.4.4"
edition = "2021"
authors = ["Brett Buddin <brett@buddin.org>", "Flipt Developers <dev@flipt.io>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["flipt"]

[features]
flipt_integration = []

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", default-features = false, features = ["serde", "clock"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
url = "2.3.1"

[dev-dependencies]
tokio = { version = "1.22.0", default-features = false, features = [ "macros", "rt-multi-thread", "time" ] }
